Redmine Issue: 687 Specimen Details Style PURPOSE: contrast test

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1930,6 +1930,7 @@ button[tabindex="-1"]:focus {
 }
 .headerLnk {
 	color: #555!important;
+	color: ##212529 !important;
 	text-decoration: none;
 	padding: 0 .5rem;
 }
